--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Daniel Hu</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-<h1>Daniel Hu</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+  <h1>Daniel Hu</h1>
+  <p>This is a paragraph of text. In the text is a <span>span element</span>
+and also a <a href="https://example.com">link</a>.</p>
+
+    <p>This is the second paragraph. It contains an <em>emphasized</em> element.</p>
+
+    <ul>
+        <li>Item <span>one</span></li>
+        <li>Item two</li>
+        <li>Item <em>three</em></li>
+    </ul>
+
 </body>
 </html>
